...
	<string name="list_pubkeyids_any">"Use any unlocked key"</string>

	<!-- Host nickname field preference title -->
	<string name="hostpref_nickname_title">"Nickname"</string>

	<!-- Host color category preference title -->
	<string name="hostpref_color_title">"Color category"</string>

	<!-- Host's default font size when opening the terminal in points (pt) -->
	<string name="hostpref_fontsize_title">"Font size (pt)"</string>

	<!-- Host pubkey usage preference title -->
	<string name="hostpref_pubkeyid_title">"Use pubkey authentication"</string>
...
	<!-- Selection choice to sort hosts by color. -->
	<string name="list_menu_sortcolor">"Sort by color"</string>
	<!-- Selection choice to sort hosts by nickname. -->
	<string name="list_menu_sortname">"Sort by name"</string>
	<string name="list_menu_settings">"Settings"</string>

	<string name="list_host_disconnect">"Disconnect"</string>
	<string name="list_host_edit">"Edit host"</string>
	<string name="list_host_portforwards">"Edit port forwards"</string>
	<string name="list_host_delete">"Delete host"</string>
	<!-- Note that the '\n' splits the lines so it's actually "quick-connect box below to connect" -->
	<string name="list_host_empty">"No hosts created yet."</string>

	<!-- Default screen rotation preference selection -->
	<string name="list_rotation_default">"Default"</string>
	<string name="list_rotation_land">"Force landscape"</string>
...
	<!-- Name for the backspace character -->
	<string name="list_delkey_backspace">"Backspace"</string>
	<!-- Name for the ASCII DEL character -->
	<string name="list_delkey_del">"Delete"</string>

	<string name="delete_message">"Are you sure you want to delete '%1$s'?"</string>
	<string name="delete_pos">"Yes, delete"</string>
	<string name="delete_neg">"Cancel"</string>

	<string name="disconnect_all_message">"Are you sure you want to disconnect from all connected hosts?"</string>
	<string name="disconnect_all_pos">"Yes, disconnect"</string>
	<string name="disconnect_all_neg">"Cancel"</string>

...
	<!-- Menu selection to reset colors to their defaults. -->
	<string name="menu_colors_reset">"Reset"</string>

	<!-- Displayed in the notification bar that connections are active -->
	<string name="app_is_running">"MoshBot is running"</string>

	<string name="color_red">"red"</string>
	<string name="color_green">"green"</string>
	<string name="color_blue">"blue"</string>
	<string name="color_gray">"gray"</string>

	<!-- Very short label indicating the number next to it is "foreground color" number. -->
	<string name="colors_fg_label">"FG: %1$d"</string>
...
