...
	android:orientation="vertical"
	>

	<!-- paddingBottom is calculated with FloatingActionButton's height (56dp) and
	     margins (16dp): 56dp + (2 x 16dp) = 88dp. -->
	<android.support.v7.widget.RecyclerView
		android:id="@+id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingBottom="88dp"
		android:clipToPadding="false"
		/>

...
